[project]
name = "env-jupyter"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "jupyter-nbextensions-configurator>=0.6.4",
    "jupyterlab>=4.3.5",
    "jupyterlab-lsp>=5.1.0",
    "python-lsp-server[all]>=1.12.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
