[project]
name = "env-jupyter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "jupyter-nbextensions-configurator>=0.6.4",
    "jupyterlab>=4.4.3",
    "jupyterlab-lsp>=5.1.1",
    "python-lsp-server>=1.12.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
